--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "langchain>=1.2.0",
     "langchain-anthropic>=1.3.0",
     "langchain-openai>=1.1.6",
+    "langchain-tavily>=0.2.16",
     "langgraph>=1.0.5",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
